# BLINK

./: pyproject.toml
blink/: build_faiss_index.py  candidate_generation.py  main_dense.py  ner.py  utils.py
blink/biencoder/: biencoder.py  data_process.py  eval_biencoder.py  nn_prediction.py  train_biencoder.py  zeshel_utils.py
blink/candidate_ranking/: bert_reranking.py  evaluate.py  train.py  utils.py
blink/candidate_retrieval/: candidate_generators.py  data_ingestion.py  dataset.py  enrich_data.py  evaluator.py  json_data_generation.py  link_wikipedia_and_wikidata.py  perform_and_evaluate_candidate_retrieval_multithreaded.py  process_intro_sents.py  process_wiki_extractor_output.py  process_wiki_extractor_output_full.py  process_wiki_extractor_output_links.py  process_wikidata.py  utils.py
blink/common/: optimizer.py  params.py  ranker_base.py
blink/crossencoder/: crossencoder.py  data_process.py  train_cross.py
blink/indexer/: faiss_indexer.py
